--- a/reset_21/index.html
+++ b/reset_21/index.html
@@ -29,6 +29,7 @@
     </style>
 </head>
 <body>
+  <script src="/auth-check.js"></script>
 
 <header class="p-6 text-center gradient-bg border-b">
     <h1 class="text-3xl font-bold text-green-800 tracking-tight">RESET 21 DÍAS</h1>
@@ -154,13 +155,13 @@
                 </div>
                 <h3 class="font-bold text-green-700 mt-4 mb-2">📅 Menú día a día – Semana 1</h3>
                 <div class="space-y-3 text-sm">
-                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 1</span> Desayuno: Porridge avena + frutos rojos + chía. Comida: Crema calabacín + lenteja roja. Cena: Puré calabaza + pescado blanco.</div>
-                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 2</span> Desayuno: Huevos + espinaca + boniato. Comida: Arroz basmati + salmón + verduras. Cena: Sopa puerro y zanahoria.</div>
-                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 3</span> Desayuno: Yogur + nueces + canela. Comida: Bowl boniato + pollo + rúcula. Cena: Verduras al horno + hummus.</div>
-                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 4</span> Desayuno: Porridge antiinflamatorio. Comida: Crema calabaza + arroz basmati. Cena: Pescado blanco + calabacín.</div>
-                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 5</span> Desayuno: Huevos + espinaca. Comida: Lenteja roja estofada. Cena: Puré zanahoria + salmón.</div>
-                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 6</span> Desayuno: Yogur + semillas + frutos rojos. Comida: Arroz + pollo + verduras. Cena: Sopa ligera vegetal.</div>
-                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 7</span> Desayuno: Porridge + nueces. Comida: Salmón al horno + boniato. Cena: Crema suave de verduras.</div>
+                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 1</span><br>Desayuno: Porridge avena + frutos rojos + chía.<br>Comida: Crema calabacín + lenteja roja.<br>Cena: Puré calabaza + pescado blanco.</div>
+                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 2</span><br>Desayuno: Huevos + espinaca + boniato.<br>Comida: Arroz basmati + salmón + verduras.<br>Cena: Sopa puerro y zanahoria.</div>
+                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 3</span><br>Desayuno: Yogur + nueces + canela.<br>Comida: Bowl boniato + pollo + rúcula.<br>Cena: Verduras al horno + hummus.</div>
+                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 4</span><br>Desayuno: Porridge antiinflamatorio.<br>Comida: Crema calabaza + arroz basmati.<br>Cena: Pescado blanco + calabacín.</div>
+                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 5</span><br>Desayuno: Huevos + espinaca.<br>Comida: Lenteja roja estofada.<br>Cena: Puré zanahoria + salmón.</div>
+                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 6</span><br>Desayuno: Yogur + semillas + frutos rojos.<br>Comida: Arroz + pollo + verduras.<br>Cena: Sopa ligera vegetal.</div>
+                    <div class="day-row"><span class="meal-badge bg-orange-100 text-orange-700">Día 7</span><br>Desayuno: Porridge + nueces.<br>Comida: Salmón al horno + boniato.<br>Cena: Crema suave de verduras.</div>
                 </div>
             </div>
         </div>
@@ -183,13 +184,13 @@
                 </div>
                 <h3 class="font-bold text-green-700 mt-4 mb-2">📅 Menú día a día – Semana 2</h3>
                 <div class="space-y-3 text-sm">
-                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 8</span> Desayuno: Tortilla vegetal. Comida: Quinoa + brócoli + garbanzos. Cena: Crema de hinojo.</div>
-                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 9</span> Desayuno: Yogur + semillas + arándanos. Comida: Pescado azul + verduras asadas. Cena: Salteado + tofu.</div>
-                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 10</span> Desayuno: Pudding chía. Comida: Lentejas con verduras. Cena: Sopa de miso.</div>
-                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 11</span> Desayuno: Huevos + espinaca. Comida: Quinoa + verduras. Cena: Crema vegetal.</div>
-                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 12</span> Desayuno: Yogur + nueces. Comida: Garbanzos + calabacín + rúcula. Cena: Pescado azul + espárragos.</div>
-                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 13</span> Desayuno: Tortilla + champiñones. Comida: Lentejas + brócoli. Cena: Sopa ligera.</div>
-                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 14</span> Desayuno: Pudding chía + frutos rojos. Comida: Quinoa + tofu + verduras. Cena: Crema de hinojo.</div>
+                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 8</span><br>Desayuno: Tortilla vegetal.<br>Comida: Quinoa + brócoli + garbanzos.<br>Cena: Crema de hinojo.</div>
+                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 9</span><br>Desayuno: Yogur + semillas + arándanos.<br>Comida: Pescado azul + verduras asadas.<br>Cena: Salteado + tofu.</div>
+                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 10</span><br>Desayuno: Pudding chía.<br>Comida: Lentejas con verduras.<br>Cena: Sopa de miso.</div>
+                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 11</span><br>Desayuno: Huevos + espinaca.<br>Comida: Quinoa + verduras.<br>Cena: Crema vegetal.</div>
+                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 12</span><br>Desayuno: Yogur + nueces.<br>Comida: Garbanzos + calabacín + rúcula.<br>Cena: Pescado azul + espárragos.</div>
+                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 13</span><br>Desayuno: Tortilla + champiñones.<br>Comida: Lentejas + brócoli.<br>Cena: Sopa ligera.</div>
+                    <div class="day-row"><span class="meal-badge bg-green-100 text-green-700">Día 14</span><br>Desayuno: Pudding chía + frutos rojos.<br>Comida: Quinoa + tofu + verduras.<br>Cena: Crema de hinojo.</div>
                 </div>
             </div>
         </div>
@@ -210,13 +211,13 @@
                 </div>
                 <h3 class="font-bold text-green-700 mt-4 mb-2">📅 Menú día a día – Semana 3</h3>
                 <div class="space-y-3 text-sm">
-                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 15</span> Desayuno: Huevos + aguacate. Comida: Salmón + espárragos. Cena: Crema vegetal.</div>
-                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 16</span> Desayuno: Smoothie verde. Comida: Pollo + verduras asadas. Cena: Verduras + huevo.</div>
-                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 17</span> Desayuno: Porridge proteico. Comida: Bowl mediterráneo. Cena: Sopa vegetal.</div>
-                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 18</span> Desayuno: Huevos + espinaca. Comida: Salmón + brócoli. Cena: Crema calabaza.</div>
-                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 19</span> Desayuno: Smoothie verde. Comida: Pollo + quinoa + verduras. Cena: Verduras al vapor + huevo.</div>
-                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 20</span> Desayuno: Porridge + semillas. Comida: Salmón + espárragos. Cena: Sopa ligera.</div>
-                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 21</span> Desayuno: Huevos + aguacate. Comida: Bowl mediterráneo. Cena: Crema suave integradora.</div>
+                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 15</span><br>Desayuno: Huevos + aguacate.<br>Comida: Salmón + espárragos.<br>Cena: Crema vegetal.</div>
+                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 16</span><br>Desayuno: Smoothie verde.<br>Comida: Pollo + verduras asadas.<br>Cena: Verduras + huevo.</div>
+                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 17</span><br>Desayuno: Porridge proteico.<br>Comida: Bowl mediterráneo.<br>Cena: Sopa vegetal.</div>
+                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 18</span><br>Desayuno: Huevos + espinaca.<br>Comida: Salmón + brócoli.<br>Cena: Crema calabaza.</div>
+                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 19</span><br>Desayuno: Smoothie verde.<br>Comida: Pollo + quinoa + verduras.<br>Cena: Verduras al vapor + huevo.</div>
+                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 20</span><br>Desayuno: Porridge + semillas.<br>Comida: Salmón + espárragos.<br>Cena: Sopa ligera.</div>
+                    <div class="day-row"><span class="meal-badge bg-blue-100 text-blue-700">Día 21</span><br>Desayuno: Huevos + aguacate.<br>Comida: Bowl mediterráneo.<br>Cena: Crema suave integradora.</div>
                 </div>
             </div>
         </div>
@@ -297,7 +298,7 @@
                 <i data-lucide="feather" class="w-5 h-5 text-orange-500"></i>
                 Brain Dumps y frases de cierre
             </h2>
-            <p class="text-xs text-gray-600 mb-4">Elige tu día y escribe. Cada día tiene su prompt y su frase para cerrar.</p>
+            <p class="text-xs text-gray-600 mb-4">Elige tu día y escribe. Cada día tiene su ejercicio para vaciar y su frase para cerrar.</p>
 
             <!-- Fase 1 -->
             <button type="button" onclick="toggleAccordion('night-f1')" class="accordion-toggle mt-2">
